@@ -1,6 +1,7 @@
 2010-03-20 Homer Xing <homer.xing@gmail.com>
 
     * Remove "Offline installation" functionality.
+    * Fix "Quick setup is not launchable" issue.
 
 2010-03-20 MA Yue <velly.empire@gmail.com>
 
